# vehicle-diagnostics

./: CMakeLists.txt  README.md  main.cpp  rpmSensor.hpp  safetyManager.cpp  safetyManager.hpp  sensorManager.cpp  sensorManager.hpp  tempSensor.cpp  voltageSensor.hpp
.github/workflows/: ci-build.yaml
dataProvider/: dataProvider.hpp
includes/: commonTypes.hpp  dataProvider.hpp  display.hpp  engine.hpp  fuelConsumptionSensor.hpp  loadSensor.hpp  oilPressureSensor.hpp  rpmSensor.hpp  safetyManager.hpp  sensor.hpp  sensorId.hpp  sensorManager.hpp  voltageSensor.hpp
managers/: safetyManager.hpp  sensorManager.hpp
sensors/: tempSensor.hpp
src/: dataProvider.cpp  display.cpp  engine.cpp  main.cpp  rpmSensor.cpp  safetyManager.cpp  sensorManager.cpp
src/dataProvider/: dataProvider.cpp
src/managers/: safetyManager.cpp  sensorManager.cpp
src/sensors/: fuelConsumptionSensor.cpp  loadSensor.cpp  oilPressureSensor.cpp  rpmSensor.cpp  tempSensor.cpp  voltageSensor.cpp
tests/: CMakeLists.txt  test_engin.cpp
